[+] added FarmHash SVN r4
[+] added Intel's fork of zlib
[+] added memcpy, memmove, memset codecs
[+] added crush 0.0.1
[+] added zling 20140324
[+] added Nakamichi in many variants
[+] added PostgreSQL's LZ 9.3.4
[+] added FSE 2014-04-07
[+] added Nobuo Ito's LZSS 1.0
[+] added Dmitry Shkarin's LZP v0
[+] added lrrle v0
[+] added zstd 2015-01-31
[+] added Brotli 2015-02-01
[+] added wfLZ r10
[~] updated blosc to 1.5.2
[~] updated lz4 to r127
[~] updated LZJB to the latest FreeBSD version
[~] updated tornado to 0.6a
[~] updated xxhash to r39
[~] made CityHash optional as it's superseeded by FarmHash
[-] removed xxhash256, it's dangerously weak
[!] fixed integer underflow
[!] fixed a segfault with nop codec
[!] fixed an error in decompression efficiency calculations

0.14.2
[+] added FNV1a-penumbra
[!] fixed compilation issues on some Linuces

0.14.1
[+] added byte-swapping transforms (bswap16, bswap32, bswap64)
[!] added missing zconf.h
[!] minor fixes

0.14
[+] added z3lib 1.3
[+] added CityHash32
[+] added 128-bit variants of murmur hash
[+] added support for safe lz4 decoder. Use LZ4 for the fast one (like before) and LZ4safe for the safe one
[~] removed bcl-lz from the list of all codecs. It's so extremely slow it was disturbing testing. And lzfast is still there.
[~] the number of small_iters is not fixed; duration is
[~] updated CityHash64/128 to 1.1.0
[~] updated zlib to 1.2.8
[~] updated snappy to 1.1.0
[~] updated lzo to 2.06
[~] updated blosc to 1.2.3
[~] updated zopfli to 1.0.0
[~] updated SpookyHash to V2 2012-08-05
[~] updated LZ4 to r97
[~] cleanup
[!] restoring default console colour would fail on some systems
[!] several minor bugs

0.13.4
[+] added umac, vmac
[+] added ar
[~] cleanup
[~] improved printing of results
[!] added uhash, vhash, umac, vmac to the list of checksums
[!] Hopefully fixed compilation issues on some Unices 

0.13.3
[+] added uhash, vhash
[!] disabled FNV1a-YosimitsuTriadiiXMM unless SSL2 is explicitly enabled

0.13.2